# PicoHome

./: .gitignore  LICENSE  README.md
Firmware/: Doxyfile
Firmware/access_control_unit/: CMakeLists.txt
Firmware/access_control_unit/include/: app.h  door.h  keypad.h  nfc_enums.h
Firmware/access_control_unit/src/: CMakeLists.txt  door.c  keypad.c  main.c  nfc_rfid.c
Firmware/blinds_control_unit/: CMakeLists.txt
Firmware/blinds_control_unit/include/: blind.h  stepper_motor.h
Firmware/blinds_control_unit/src/: CMakeLists.txt  blind.c  main.c
Firmware/light_control_unit/: CMakeLists.txt
Firmware/light_control_unit/include/: sen_ky018.h
Firmware/light_control_unit/src/: lightbulb.c  sen_ky018.c
Firmware/mqtt_client/: mqtt_client.c
Firmware/mqtt_client/include/: lwipopts.h  mqtt_client.h
Firmware/mqtt_client_test/: CMakeLists.txt  main.c
Hardware/Step Motor/: Prueba_motor_paso_a_paso.ino
Hardware/Step Motor/3D_Design/: Base_motor.stl  Complete_motor.stl  Suport_tube_motor.stl  Support_Door.stl  Tube_motor.stl
Software/: .gitignore  CMakeLists.txt
Software/access_control_unit/include/: app.h  door.h  keypad_irq.h  nfc_enums.h  nfc_rfid.h  pir.h
Software/access_control_unit/src/: CMakeLists.txt  app.c  door.c  keypad_irq.c  nfc_rfid.c  pir.c
Software/blinds_control_unit/: CMakeLists.txt
Software/blinds_control_unit/include/: app.h  blind.h  stepper_motor.h
Software/blinds_control_unit/src/: CMakeLists.txt  app.c  blind.c  main.c  stepper_motor.c
Software/light_control_unit/: CMakeLists.txt
Software/light_control_unit/include/: app.h  app_types.h  lightbulb.h  sen_ky018.h
Software/light_control_unit/src/: CMakeLists.txt  app.c  lightbulb.c  main.c  sen_ky018.c
Software/mqtt_client/: CMakeLists.txt  mqtt_client.c
Software/mqtt_client/include/: mqtt_client.h  types.h
Software/mqtt_client_test/: CMakeLists.txt  main.c
Web Site/: index.html  logic.js  logic_mqtt.js  style.css
